--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The home of DarthStorm</title>
+    <title>DarthStorm's Webpage</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     y r u here
-    
+    anyway:
+    <div class = "buttons">
+        <div class="button href" href="the-enemies-think/index.html">
+
+        </div>
+    </div>
 </body>
 </html>
