--- a/the-enemies-think/index.html
+++ b/the-enemies-think/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/DarthStorm/the-enemies-think/main/style.css">
+    <script src="https://raw.githubusercontent.com/DarthStorm/the-enemies-think/main/script.js"></script>
     <title>The Enemies Think</title>
 </head>
 <body>
-    <iframe src="https://github.com/DarthStorm/the-enemies-think/index.html" frameborder="0"></iframe>
+    <!-- there will be a canvas here. -->
 </body>
 </html>
