--- a/the-enemies-think/index.html
+++ b/the-enemies-think/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://raw.githubusercontent.com/DarthStorm/the-enemies-think/main/style.css">
-    <script src="https://raw.githubusercontent.com/DarthStorm/the-enemies-think/main/script.js"></script>
+    <script src="fetch.js"></script>
     <title>The Enemies Think</title>
 </head>
 <body>
