--- a/the-enemies-think/index.html
+++ b/the-enemies-think/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/DarthStorm/the-enemies-think/main/style.css">
-    <script src="fetch.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/DarthStorm/the-enemies-think/style.css">
+    <script src="https://cdn.jsdelivr.net/gh/DarthStorm/the-enemies-think/script.js"></script>
     <title>The Enemies Think</title>
 </head>
 <body>
